--- a/package.json
+++ b/package.json
@@ -4,13 +4,23 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.3",
-    "autoprefixer": "^10.4.17",
+    "@tailwindcss/ui": "^0.7.2",
+    "alpinejs": "^3.13.5",
+    "el-transition": "^0.0.7",
     "esbuild": "^0.20.1",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss-stimulus-components": "^4.0.4"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
+  },
+  "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.10",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
